# fastapi-initializer

./: README.md  main.py  pyproject.toml
