[project]
name = "fastapi-initializer"
version = "1.0.1"
description = "An interactive CLI tool that scaffolds production-ready FastAPI projects with sensible defaults."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Dasun Nethsara", email = "techsaralk.pro@gmail.com" },
]
keywords = [
    "fastapi",
    "cli",
    "scaffold",
    "project-generator",
    "boilerplate",
    "initializer",
    "template",
    "pipx",
    "uv
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "InquirerPy>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/DasunNethsara-04/fastapi-initializer"
Repository = "https://github.com/DasunNethsara-04/fastapi-initializer"
Issues = "https://github.com/DasunNethsara-04/fastapi-initializer/issues"

[project.scripts]
fastapi-init = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
